k8s/traefike/ingress-rancher.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:
    - websecure   # Port 443
  routes:
    - match: Host(`rancher.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    # If SSL_MODE=letsencrypt
    certResolver: letsencrypt
    # If SSL_MODE=custom
    # secretName: custom-tls
